src/components/ProjectList/ProjectList.scss
.Card {
  display: inline-block;
  align-content: center;
  width: 94%;
  height: 60%;
  background-color: rgb(250, 247, 233);
  border: 2px #eee;
  box-shadow: 0 0 2px 4px black;
  border-radius: 6px;
  box-sizing: border-box;
  padding: 0px;
  margin: 2% -4% 1.5% 0px;
  cursor: pointer;

  & img {
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
    border-radius: 6px;
  }
}

.separator {
  width: auto;
  height: auto;
  margin: 70px auto;
  display: block;
  padding-top: 100px;
}

.HelloContainer {
  text-align: center;
  font-weight: 400;
  font-family: "Average,serif";
  font-size: 20px;
  line-height: 1.42857143;
  height: 350px;
  margin: 200px 56px 0 56px;

  &__Left {
    display: inline-block;
    width: 50%;
  }

  &__Right {
    display: inline-block;
    width: 50%;
  }

  &--text {
    font-size: 1.5vw;
    color: grey;
    letter-spacing: 0.4px;
    text-transform: none;
    margin-top: 50px;
  }
}

.Name {
  font-weight: bold;
  font-family: "Indie Flower", cursive;
  font-size: 102px;
  color: #2C2C2C;
  text-align: center;
  text-decoration: none;
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
  transition: all 0.5s 0s ease-out;
  width: 820px;
  height: 60px;
  line-height: 65px;
  margin: 60px auto 0;
  visibility: visible;

  &-name {
    z-index: 1;
    transition: opacity 0.8s, transform 0.8s;
    animation: slideInFromLeft 1.3s 1 ease-in-out, fadeIn 0s 1 forwards;
  }

  &-bg {
    position: absolute;
    z-index: 0;
    background-color: #FFA0AB;
    height: 48px;
    width: 619px;
    top: 27px;
    left: 131px;
    box-shadow: 4px 4p 20px 2px #FFD2D7;
    transition: opacity 0.8s, transform 0.8s;
    animation: slideInFromRight 1.3s 1 ease-in-out, fadeIn 1s 1 forwards;
    animation-fill-mode: both;
    animation-delay: 0.5s;
    opacity: 0;
  }

  &-web {
    z-index: 1;
    transition: opacity 0.8s, transform 0.8s;
    animation: slideInFromRight 1.3s 1 ease-in-out, fadeIn 1s 1 forwards;
  }

  &-web-bg {
    position: absolute;
    z-index: 0;
    background-color: #FFA0AB;
    height: 48px;
    width: 605px;
    top: 27px;
    left: 131px;
    box-shadow: 4px 4p 20px 2px #FFD2D7;
    transition: opacity 0.8s, transform 0.8s;
    animation: slideInFromLeft 1.3s 1 ease-in-out, fadeIn 0s 1 forwards;
    animation-fill-mode: both;
    animation-delay: 0.5s;
    opacity: 0;
  }

  &-projects {
    z-index: 1;
    transition: opacity 0.8s, transform 0.8s;
  }

  &-projects-bg {
    position: absolute;
    z-index: 0;
    background-color: #FFA0AB;
    height: 48px;
    width: 325px;
    top: 27px;
    left: 281px;
    box-shadow: 4px 4p 20px 2px #FFD2D7;
    transition: opacity 0.8s, transform 0.8s;
  }
}

.SideDrawer {
  height: 100%;
  background-color: #FFD2D7;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
  width: 10px;
  transition: all .2s 0s linear;
  background: #ffd2d7;
  background: -moz-linear-gradient(0deg, #FFD2D7 0%, #FFF0E7 50%, #DEFDF6 100%);
  background: -webkit-linear-gradient(0deg, #FFD2D7 0%, #FFF0E7 50%, #DEFDF6 100%);
  background: linear-gradient(0deg, #FFD2D7 0%, #FFF0E7 50%, #DEFDF6 100%);
  animation: fade-in 1.3s 1 ease-in-out, fadeIn 1s 1 forwards;
}

.ProgressBar {
  height: 6px;
  width: 100vw;
  background-color: #FB8096;
  z-index: 9999;
  position: fixed;
  top: 0px;
  animation: slideInFromLeft 2.3s 1 ease-in-out, fadeIn 0s 1 forwards;
}

.ProjectList {
  background-color: rgb(250, 247, 233);
  opacity: 1;
  width: 100%;
  height: 100%;
  position: absolute;
  background-size: cover;
  overflow: auto;

  &__RightSide {
    padding-top: 1%;
    margin: 16% 1% 1% 1%;
    float: left;
    width: 98%;
    height: 98%;
  }

  &__LeftSide {
    margin: 1%;
    float: left;
    width: 98%;
    height: auto;

    &__AboutMe {
      width: 45.5%;
      height: 80%;
      padding: 5px;
      margin: auto;
      margin-top: 50px;
      margin-bottom: 30px;
      align-content: center;
      box-sizing: border-box;
      opacity: 0;
      animation: fade-in 1.3s 1 ease-in-out, fadeIn 0s 1 forwards;
      animation-fill-mode: both;
      animation-delay: 0.5s;
    }
  }
}

.Bottom {
  padding-bottom: 6%;
}

h2 {
  letter-spacing: 12px;
  font-family: 'Wallpoet', cursive;
  text-align: center;
  font-weight: 600;
  margin: -0.5% 1% 1% 1%;
  float: left;
  width: 48%;
  height: auto;
  font-size: 2vw;
}

h3 {
  letter-spacing: 12px;
  font-family: 'Wallpoet', cursive;
  text-align: center;
  font-weight: 600;
  margin: -4.5% 1% 1% 1%;
  float: left;
  width: 100%;
  height: auto;
  font-size: 4vw;
}

h4 {
  text-transform: uppercase;
  margin: 5% 0 0 0;
  text-align: center;
  font-family: 'Piedra', cursive;
  font-weight: 100;
  letter-spacing: 3px;
  height: 20%;
  padding: 5% 5% 2% 5%;
  font-size: 1.8vw;
  margin-top: 17%;
}

@media screen and (max-width: 700px) {
  ::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
  }
  
  ::-webkit-scrollbar-thumb {
    border-radius: 6px;
    color: black;
    background-color: black;
  }
  .Bottom {
    padding-bottom: 0;
  }

  .ProjectList {
    &__LeftSide {
      width: 99%;
      height: 35%;
      margin: 0 0 0 0;
      padding: 0;

      &__AboutMe {
        width: 100%;
        position: relative;
        padding: 1%;  
      }
    }

    &__RightSide {
      margin: 42% 0 0 0;
      padding: 0;
      width: 96.5%;
      height: 38%;
      overflow: auto;    
    }
  }

  .Card {
    height: 95%;
    margin: 2% -2% 2% 0;
  }
  h4 {
    font-size: 4vw;
    padding: 5% 0 2% 0;
  }
}

a {
  position: relative;
  color: #FB8096;
  text-decoration: none;
  cursor: pointer;
  margin: 18px 10px;

  &:before {
    content: "";
    position: absolute;
    width: 0px;
    height: 3px;
    bottom: -8px;
    left: 0;
    background: #FB8096;
    border-radius: 5px;
    transition: .3s ease-in;
  } 
}

.tooltip {
  background-color: white;
  border: solid 1px #FFD2D7;
  border-radius: 5px;
  color: #555;
  display: block;
  font-size: 13px;
  left: 20px;
  line-height: 1.4em;
  padding: 5px 10px;
  width: 120px;
  z-index: 9;
  opacity: 0;
  visibility: hidden;
  transition: all 0.5s 0s ease-out;
  text-align: center;
  position: absolute;
  top: 5px;
} 

@media (min-width: 600px) {
  
  .SideDrawer {
    &__SocialMedia {
      width: 36px;
      display: flex;
      flex-wrap: wrap;
      flex-direction: column;
      position: fixed;
      left: 3px;
      top: 35%;
      z-index: 3;
      opacity: 1;
      height: auto;

      &a.icon {
        flex: auto;
        margin: 10px;
        position: relative;
        cursor: pointer;
      }
    }
  }
}

@media (min-width: 750px) {
  .tooltip {
    left: 40px;
    line-height: 1.4em;
    top: -3px;
  }

  .SideDrawer {
    width: 56px;

    &__SocialMedia {
      left: 8px;
      width: 40px;
    }
  }
}

@keyframes slideInFromLeft {
  0% {
    opacity: 0;
    transform: translateX(-100%);
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideInFromRight {
  0% {
    opacity: 0;
    transform: translateX(100%);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

